--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -11,4 +15,8 @@ img {
   .section--xl {
     padding: 5rem 0;
   }
+}
+
+.navbar-brand {
+  font-family: "Indie Flower", sans-serif;
 }
