--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,22 @@ img {
   max-width: 100%;
 }
 
+@media (min-width: 768px) {
+  .navbar {
+    padding: 1rem;
+  }
+}
+
+.navbar-brand,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Indie Flower", sans-serif;
+}
+
 .section--xl {
   padding: 2.5rem 0;
 }
@@ -15,8 +31,4 @@ img {
   .section--xl {
     padding: 5rem 0;
   }
-}
-
-.navbar-brand {
-  font-family: "Indie Flower", sans-serif;
 }
